<!--
// +++LICENSE_BEGIN+++
/*
 * Copyright © 2012, Silent Circle
 * All rights reserved.
 */
// +++LICENSE_END+++
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/black" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/sc_logo_50grey" />

    <LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:orientation="vertical" >

		<RelativeLayout
			android:id="@+id/DialogDialPadTable"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<ImageButton
				android:id="@+id/DialogNumber_1"
				style="@style/DialpadButtonStyle"
				android:layout_marginBottom="2dp"
				android:contentDescription="@string/description_image_button_one"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_1_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_2"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_1"
				android:layout_marginBottom="2dp"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:layout_toRightOf="@+id/DialogNumber_1"
				android:contentDescription="@string/description_image_button_two"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_2_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_3"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_2"
				android:layout_marginBottom="2dp"
				android:layout_toRightOf="@+id/DialogNumber_2"
				android:contentDescription="@string/description_image_button_three"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_3_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_4"
				style="@style/DialpadButtonStyle"
				android:layout_alignLeft="@+id/DialogNumber_1"
				android:layout_below="@+id/DialogNumber_1"
				android:layout_marginBottom="2dp"
				android:contentDescription="@string/description_image_button_four"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_4_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_5"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_4"
				android:layout_marginBottom="2dp"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:layout_toRightOf="@+id/DialogNumber_4"
				android:contentDescription="@string/description_image_button_five"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_5_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_6"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_5"
				android:layout_marginBottom="2dp"
				android:layout_toRightOf="@+id/DialogNumber_5"
				android:contentDescription="@string/description_image_button_six"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_6_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_7"
				style="@style/DialpadButtonStyle"
				android:layout_alignLeft="@+id/DialogNumber_4"
				android:layout_below="@+id/DialogNumber_4"
				android:layout_marginBottom="2dp"
				android:contentDescription="@string/description_image_button_seven"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_7_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_8"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_7"
				android:layout_marginBottom="2dp"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:layout_toRightOf="@+id/DialogNumber_7"
				android:contentDescription="@string/description_image_button_eight"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_8_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_9"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_8"
				android:layout_marginBottom="2dp"
				android:layout_toRightOf="@+id/DialogNumber_8"
				android:contentDescription="@string/description_image_button_nine"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_9_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_star"
				style="@style/DialpadButtonStyle"
				android:layout_alignLeft="@+id/DialogNumber_7"
				android:layout_below="@+id/DialogNumber_7"
				android:layout_marginBottom="2dp"
				android:contentDescription="@string/description_image_button_star"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_star_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_0"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_star"
				android:layout_marginBottom="2dp"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:layout_toRightOf="@+id/DialogNumber_star"
				android:contentDescription="@string/description_image_button_zero"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_0_wht" />

			<ImageButton
				android:id="@+id/DialogNumber_hash"
				style="@style/DialpadButtonStyle"
				android:layout_alignTop="@+id/DialogNumber_0"
				android:layout_marginBottom="2dp"
				android:layout_toRightOf="@+id/DialogNumber_0"
				android:contentDescription="@string/description_image_button_pound"
				android:onClick="onNumberClickDialog"
				android:src="@drawable/dial_num_pound_wht" />
		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/DialogDialEndCall"
				style="@style/ButtonStyleRed"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:gravity="center_horizontal|center_vertical"
				android:onClick="endCallDialog"
				android:text="@string/hangup_call"
				android:textColor="@android:color/white"
				android:textSize="18.0sp" />

			<Button
				android:id="@+id/DialogDialHide"
				style="@style/ButtonStyleGray"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_weight="1"
				android:gravity="center_horizontal|center_vertical"
				android:onClick="hideInCallDialog"
				android:text="@string/dialog_dial_hide"
				android:textColor="@android:color/white"
				android:textSize="18.0sp" />
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>
