<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/UsernamePasswordMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/silent_black"
                tools:context=".fragments.ProvisioningUserPassword">

    <TextView
            android:id="@+id/UsernamePasswordInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/provisioning_top_margin"
            android:text="@string/provisioning_welcome"
            android:textColor="@color/v_blue"
            android:textSize="20sp"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/UsernamePasswordButtons"
            android:layout_below="@+id/UsernamePasswordInfoText"
            android:layout_marginLeft="@dimen/provisioning_left_margin"
            android:layout_marginRight="@dimen/provisioning_right_margin"
            >

        <RelativeLayout
                android:id="@+id/UsernamePasswordFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible"
                tools:visibility="visible">

            <EditText
                    android:id="@+id/UsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/provisioning_top_margin"
                    android:hint="@string/provisioning_username_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions"
                    android:singleLine="true"
                    android:tag="username"
                    android:textSize="16sp"/>

            <EditText
                    android:id="@+id/PasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/UsernameInput"
                    android:layout_marginTop="@dimen/provisioning_top_margin"
                    android:hint="@string/provisioning_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:tag="password"
                    android:textSize="16sp"/>

            <CheckBox
                    android:id="@+id/PasswordShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PasswordInput"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/provisioning_top_margin"
                    android:onClick="showPasswordCheck"
                    android:text="@string/provisioning_show_pw" />

            <CheckedTextView
                    android:id="@+id/UsernamePasswordCheckBoxTC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/provisioning_top_margin"
                    android:layout_below="@+id/PasswordShow"
                    android:layout_alignParentLeft="true"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:checked="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/provisioning_privacy_tc"
                    android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/UsernamePasswordProgressLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="invisible">

            <ProgressBar
                    android:id="@+id/UsernamePasswordProgressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
            android:id="@+id/UsernamePasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/provisioning_left_margin"
            android:layout_marginRight="@dimen/provisioning_right_margin"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/UsernamePasswordCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/provisioning_right_margin"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="provisioningCancel"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/cancel_dialog"
                android:textSize="18sp"
                android:visibility="visible"/>

        <Button
                android:id="@+id/UsernamePasswordOK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/provisioning_right_margin"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/next"
                android:textSize="18sp"
                android:visibility="visible"/>
    </LinearLayout>

</RelativeLayout>
